@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- PHP/Mapscript: Added getResultsBounds() method in layer object (#2967)
+
 - Fix SLD containing a PropertyIsLike filter (#3855)
 
 - Fixed msUnionLayerNextShape to return correct values (#3859)  
